nim/pk.nim

  proc pkGetAttribute*(vm: ptr PKVM, instance: cint, name: cstring, index: cint): bool {.importc, cdecl.}
  proc pkSetAttribute*(vm: ptr PKVM, instance: cint, name: cstring, value: cint): bool {.importc, cdecl.}
  proc pkImportModule*(vm: ptr PKVM, path: cstring, index: cint): bool {.importc, cdecl.}
